--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <div class="container mt-5 welcome">
+    <div class="container mt-5 text-center">
         <img src="images/Anohana.jpg" alt="" class="rounded-circle " height="100" width="100">
         <h1 class="display-3">Welcome, Akshay Kumar Nalatawad</h1>
         <p>Manage your info, privacy, and security to make Google work better for you.
@@ -21,40 +21,44 @@
 
     <div class="container">
         <div class="row justify-content-center">
-            <div class="col-lg-6 my-2">
-                <div class="card">
-                    <div class="border-bottom py-1 text-center">
-                        <img src="images/privacy.png" alt="" class="float-end m-2">
-                        <h3 class="fw-400 text-start px-3 fs-4"> Privacy & Personlization</h3>
-                        <p class="fs-6 text-start px-3">
-                            See the data in your Google Account and choose what activity is saved to personalize your Google experience.
-                        </p>
+            <div class="col-lg-9">
+                <div class="row justify-content-center">
+                    <div class="col-md-6 my-2">
+                        <div class="card h-100">
+                            <div class="card-body d-flex">
+                                <div>
+                                    <h3 class="fw-400 text-start px-3 fs-4"> Privacy & Personlization</h3>
+                                    <p class="fs-6 text-start px-3">
+                                        See the data in your Google Account and choose what activity is saved to personalize your Google experience.
+                                    </p>
+                                </div>
+                                <img src="images/privacy.png" alt="" class="m-2" height="90">
+                            </div>
+                            <div class="border-top p-3">
+                                <a href="" class="text-decoration-none ">Manage your data & privacy</a>
+                            </div>
+                        </div>
                     </div>
-                    <div class="card-body">
+                    <div class="col-md-6 my-2">
+                        <div class="card h-100">
+                            <div class="card-body d-flex">
+                                <div>
+                                    <h3 class="fw-400 text-start px-3 fs-4"> You have security recommendations</h3>
+                                    <p class="fs-6 text-start px-3">
+                                        Recommended actions found in the Security Checkup
+                                    </p>
+                                </div>
+                                <img src="images/security.png" alt="" class="m-2" height="90">
+                            </div>
+                            <div class="border-top p-3">
+                                <a href="" class="text-decoration-none ">Protect your account</a>
+                            </div>
+                        </div>
+                    </div>
 
-                        <a href="" class="text-decoration-none ">Manage your data & privacy</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-6 my-2">
-                <div class="card">
-                    <div class="border-bottom py-1 text-center">
-                        <img src="images/security.png" alt="" class="float-end m-2">
-                        <h3 class="fw-400 text-start px-3 fs-4">You have security recommendations</h3>
-                        <p class="fs-6 text-start px-3">
-                            Recommended actions found in the Security Checkup
-                        </p>
-                    </div>
-                    <div class="card-body">
-
-                        <a href="" class="text-decoration-none ">Protect your account</a>
-                    </div>
                 </div>
             </div>
         </div>
-
-    </div>
-
 </body>
 
 </html>
